# Perseverance

./: .gitignore  KF_results.txt  RBM.py  README.md  RockerBogieDiagram.py  TODO.md  diff_drive_kalman_filter.py  draw_rocker_bogie.py  drivebase_kalman_filter.py  kalman_filter_overview.md  requirements.txt  run_uncrustify.sh  setup_venv.sh
.github/workflows/: main.yml  reformat_code.yml
RoverFirmware/: README.md  platformio.ini
RoverFirmware/src/: main.cpp
RoverMotorControl/: README.md  platformio.ini
RoverMotorControl/include/: Adafruit_MS_PWMServoDriver.h  Adafruit_MotorShield.h  rover_pins.h  wheel_data.h
RoverMotorControl/src/: main.cpp  main_zephyr.cpp  wheel_data.cpp
RoverMotorControl/zephyr/: CMakeLists.txt
equations/: equations.py  replace_bg.py
perseverance/: CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  bevel_0_85m_18t_45deg.part  config.json  leftbogie.stl  leftrocker.part  leftrocker.stl  mg995.part  package.xml
perseverance/config/: communications.yaml  managers.yaml  rover.rviz  state_estimation_config.yaml
perseverance/include/perseverance/communications/: spi_device.h  wheel_data.h  wheel_data_spi_node.hpp
perseverance/include/perseverance/rover_sensors/drivers/: bno055.hpp  bno055_registers.hpp
perseverance/include/perseverance/rover_sensors/filters/: alpha_beta_filter.hpp
perseverance/include/perseverance/rover_sensors/managers/: laser_manager.hpp
perseverance/include/perseverance/rover_sensors/nodes/: bno055_node.hpp
perseverance/include/perseverance/rover_sensors/sim/: sim_imu.hpp  sim_lidar.hpp
perseverance/include/perseverance/state_estimation/: base_kalman_filter.hpp  kalman_filter.hpp  perseverance_kalman_filter.hpp  perseverance_sensor_adapters.hpp  state_estimation.hpp
perseverance/launch/: communications.launch.xml  rover.launch.py  sensors.launch.xml  sensors_drivers.launch.xml  sensors_managers.launch.xml  sensors_sim.launch.xml  state_estimation.launch.xml
perseverance/meshes/: 3mm_m3.part  3mm_m3.stl  bevel_0_85m_18t_45deg.part  bevel_0_85m_18t_45deg.stl  bevel_0_85m_18t_45deg__2.part  bevel_0_85m_18t_45deg__3.part  body.part  body.stl  frontsteeringarm.part  frontsteeringarm.stl  leftbogie.part  leftrocker.part  mg995.part  mg995.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl  part_1__3.part  part_1__5.part  part_1__7.part  rearsteeringarm.part  rightbogie.part  rightbogie.stl  rightrocker.part  rightrocker.stl  wheelhub.part
perseverance/perseverance/urdf/: base_link.stl  bevel_0_85m_18t_45deg.stl  frontsteeringarm.part  leftbogie.part
perseverance/src/communications/: wheel_data_spi_node.cpp
perseverance/src/rover_sensors/drivers/: bno055.cpp
perseverance/src/rover_sensors/managers/: laser_manager.cpp
perseverance/src/rover_sensors/nodes/: bno055_node.cpp
perseverance/src/rover_sensors/sim/: sim_imu.cpp  sim_lidar.cpp
perseverance/src/state_estimation/: kalman_filter.cpp  state_estimation.cpp
perseverance/urdf/: base_link.part  base_link.stl  bevel_0_85m_18t_45deg.part  bevel_0_85m_18t_45deg__2.part  bevel_0_85m_18t_45deg__2.stl  bevel_0_85m_18t_45deg__3.part  bevel_0_85m_18t_45deg__3.stl  create_urdf.py  frontsteeringarm.part  frontsteeringarm.stl  generate_urdf_from_onshape.py  leftbogie.part  leftrocker.part  leftrocker.stl  mg995.part  part_1.part  part_1__2.part  part_1__4.part  part_1__6.part  rearsteeringarm.part  rearsteeringarm.stl  rightbogie.part  rightrocker.part  rightrocker.stl  rover.urdf  rover.urdf.xacro  urdf_to_xacro.py  wheel.part  wheelhub.part
plots/: KF_results.txt
prototyping/: CMakeLists.txt  ackermann_planner.cpp  ackermann_planner.hpp  ackermann_planner_demo.cpp  auto_bill_of_materials.py  draw_rocker_bogie.py  interactive_planner.py  kalman_filter.py  mecanum_drive.py  requirements.txt  rocker_bogie_kinematic_model.py  rover_constants.py  rover_teleop.py  setup_venv.sh  steering_planner.py  theme.json
prototyping/navigation_reinforcement_learning/: nav_env.py  play_sb3.py  ppo.py  rover_nav_gym.py  train.py  train_sb3.py
prototyping/plots/: KF_results.txt
sensors/: CMakeLists.txt  package.xml
sensors/config/: drivers.yaml  sensors_config.yaml  sim.yaml
sensors/include/sensors/: bno055_node.hpp  simulated_imu.hpp  smbus_functions.h
sensors/include/sensors/drivers/: bno055.hpp
sensors/include/sensors/filters/: alpha_beta_filter.hpp
sensors/include/sensors/nodes/: bno055_node.hpp
sensors/include/sensors/sim/: sim_imu.hpp  sim_lidar.hpp  simulated_imu.hpp
sensors/launch/: sensors.launch.xml  sensors_drivers.launch.xml  sensors_managers.launch.xml  sensors_sim.launch.xml
sensors/src/: bno055.cpp  bno055_node.cpp  simulated_imu.cpp
sensors/src/drivers/: bno055.cpp
sensors/src/managers/: laser_manager.cpp
sensors/src/nodes/: bno055_node.cpp
sensors/src/sim/: sim_imu.cpp  sim_lidar.cpp  simulated_imu.cpp
state_estimation/: CMakeLists.txt  package.xml
state_estimation/config/: rviz_config.rviz  state_estimation_config.yaml
state_estimation/include/state_estimation/: kalman_filter.hpp  state_estimation.hpp
state_estimation/launch/: state_estimation.launch.xml
state_estimation/src/: kalman_filter.cpp  state_estimation.cpp
